sql/ha_partition.cc
@@ -1046,6 +1046,8 @@ int ha_partition::rename_partitions(const char *path)
               error= 1;
             (void) sync_ddl_log();
           }
+          if (error)
+            DBUG_RETURN(error);
           file= m_new_file[i];
           DBUG_PRINT("info", ("Rename partition from %s to %s",
                      part_name_buff, norm_name_buff));
